src/objects/Car__c.object
<CustomObject>
    <fields>
        <fullName>Is_Valid_For_Rent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>defines if car is available for rent</description>
        <label>Is Valid For Rent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>BMW 530, Volvo s50</description>
        <label>Model</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <formula>IF(Is_Valid_For_Rent__c = false, &quot;no car available&quot;, 

CASE( Type__c ,
     &quot;Sedan&quot;,  IMAGE(&quot;https://mindful-otter-3axy1x-dev-ed--c.vf.force.com/resource/1664525734000/Sedan?&quot;,&quot;Sedan&quot;,100,100),

     &quot;Minivan&quot;, IMAGE(&quot;https://mindful-otter-3axy1x-dev-ed--c.vf.force.com/resource/1664525708000/Minivan?&quot;,&quot;Minivan&quot;,100,100),

     &quot;Hatchback&quot;, IMAGE(&quot;https://mindful-otter-3axy1x-dev-ed--c.vf.force.com/resource/1664525648000/Hatchback?&quot;,&quot;Hatchback&quot;,100,100),

     &quot;no car available&quot;
)
)</formula>
        <label>Photo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sedan</fullName>
                </value>
                <value>
                    <fullName>Minivan</fullName>
                </value>
                <value>
                    <fullName>Hatchback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Car</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Car Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>